--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,12 +5,12 @@
         <welcome-file>home.jsp</welcome-file>
     </welcome-file-list>
     <servlet>
-        <servlet-name>Web-Project</servlet-name>
+        <servlet-name>WebProject</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <load-on-startup>1</load-on-startup>
     </servlet>
     <servlet-mapping>
-        <servlet-name>Web-Project</servlet-name>
+        <servlet-name>WebProject</servlet-name>
         <url-pattern>/</url-pattern>
     </servlet-mapping>
 </web-app>
